# cicd-squabbler

./: .gitignore  0-AI-MANIFEST.a2ml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.adoc  flake.nix  sonar-project.properties
.github/: 0.1-AI-MANIFEST.a2ml  SECURITY.md
.github/workflows/: governance.yml  hypatia-scan.yml  instant-sync.yml  mirror.yml  quality.yml  rust-ci.yml  scorecard.yml  secret-scanner.yml
.machine_readable/: ENSAID_CONFIG.a2ml  root-allow.txt
.machine_readable/ai/: AI.a2ml
.machine_readable/bot_directives/: coverage.a2ml  debt.a2ml  methodology.a2ml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/contractiles/trust/: Trustfile.a2ml
.machine_readable/descriptiles/: 0-AI-MANIFEST.a2ml  ANCHOR.a2ml  CLADE.a2ml  ECOSYSTEM.a2ml  STATE.a2ml
.machine_readable/descriptiles/anchors/: 0-AI-MANIFEST.a2ml  ANCHOR.a2ml
.machine_readable/integrations/: groove.a2ml
.machine_readable/policies/: MAINTENANCE-AXES.a2ml
crates/squabble-app/: Cargo.toml
crates/squabble-app/src/: main.rs
crates/squabble-cli/: Cargo.toml
crates/squabble-cli/src/: boj.rs  context.rs  fetch.rs  fight.rs  main.rs  workflows.rs
crates/squabble-core/: Cargo.toml
crates/squabble-core/src/: gate.rs  lib.rs  moves.rs  outcome.rs
crates/squabble-fight/: Cargo.toml
crates/squabble-fight/src/: apply.rs  context.rs  lib.rs  workflows.rs
docs/: CHARTER.adoc
examples/: 0.1-AI-MANIFEST.a2ml  gate-deadlock.json  ipv6-only-pr43.json  licence-policy-deadlock.json
spark/: squabble_gate.gpr
spark/src/: gate_machine.adb  gate_machine.ads
verification/tests/: 0.2-AI-MANIFEST.a2ml
