# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>
[workspace]
resolver = "2"
members = [
    "crates/squabble-core",
    "crates/squabble-fight",
    "crates/squabble-cli",
    "crates/squabble-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>"]
repository = "https://github.com/hyperpolymath/cicd-squabbler"
rust-version = "1.85"

[workspace.dependencies]
squabble-core = { path = "crates/squabble-core" }
squabble-fight = { path = "crates/squabble-fight" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
