# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>
#
# squabble-app — the GitHub App front-end. v0.1 is an HONEST STUB: the axum
# webhook server + octocrab client are the next implementation step and are NOT
# yet wired (see docs/CHARTER.adoc "Trigger surface"). The planned dependencies
# (axum, octocrab, tokio) are intentionally not declared yet so the workspace
# builds fast and nothing claims to work that does not. Adding them is tracked
# as the first squabble-app task.
[package]
name = "squabble-app"
description = "GitHub App front-end (axum webhook + octocrab) — STUB in v0.1; calls the same squabble-core."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "squabble-app"
path = "src/main.rs"

[dependencies]
squabble-core = { workspace = true }
