# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>
#
# squabble-app — the App front-end. As of Push #2 this is a REAL loopback HTTP
# backend (axum): it serves the shared `squabble-fight` planner on
# 127.0.0.1:7741 so the boj-server `cicd-squabbler-mcp` cartridge (a Deno
# gateway that may only `fetch()`, never spawn processes) can summon the
# squabbler. The GitHub App *webhook* leg (check_run.requested_action +
# octocrab auth) remains the next step and is still honestly absent — the
# server refuses to pretend otherwise (no webhook route is registered).
[package]
name = "squabble-app"
description = "squabble-app — loopback HTTP backend serving the shared fight planner (axum); GitHub App webhook leg still to come."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "squabble-app"
path = "src/main.rs"

[dependencies]
squabble-core = { workspace = true }
squabble-fight = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
