# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>
[package]
name = "squabble-fight"
description = "Host-side fight orchestration shared by the CLI and the App: ecosystem context, workflow ground-truth, and the pure fight planner."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
squabble-core = { workspace = true }
